--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ wee_alloc = { version = "0.4.5", optional = true }
 
 ndarray = "0.15.3"
 
+js-sys = "0.3.52"
+
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
 
