Fix typo (max instead of min) causing wonky dissonance results

--- a/pkg/package.json
+++ b/pkg/package.json
@@ -9,6 +9,7 @@
     "dissonance_wasm.js",
     "dissonance_wasm.d.ts"
   ],
-  "browser": "dissonance_wasm.js",
-  "types": "dissonance_wasm.d.ts"
+  "module": "dissonance_wasm.js",
+  "types": "dissonance_wasm.d.ts",
+  "sideEffects": false
 }
