build with no-modules target

--- a/pkg/package.json
+++ b/pkg/package.json
@@ -9,7 +9,6 @@
     "dissonance_wasm.js",
     "dissonance_wasm.d.ts"
   ],
-  "module": "dissonance_wasm.js",
-  "types": "dissonance_wasm.d.ts",
-  "sideEffects": false
+  "browser": "dissonance_wasm.js",
+  "types": "dissonance_wasm.d.ts"
 }
