--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,11 +34,12 @@ compute = "0.2.3"
 
 termtree = "0.5"
 
-rand = "0.8"
+rand = "0.9.2"
 
 binary-heap-plus = "0.5"
 
-get-size2 = { version = "^0.1", features = ["derive"]}
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+rayon = "1.11.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
