--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,8 @@ rand = "0.9.2"
 
 binary-heap-plus = "0.5"
 
+rapidhash = "4.2.0"
+
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 rayon = "1.11.0"
 
@@ -45,5 +47,10 @@ rayon = "1.11.0"
 wasm-bindgen-test = "0.3.13"
 
 [profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+opt-level = 3
+lto = "fat"
+codegen-units = 1
+panic = "abort"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-Oz", "--enable-simd", "--enable-bulk-memory", "--enable-mutable-globals"]
