--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ compute = "0.2.3"
 
 termtree = "0.5"
 
-rand = "0.9.2"
+fastrand = "2.3.0"
 
 binary-heap-plus = "0.5"
 
@@ -42,6 +42,7 @@ rapidhash = "4.2.0"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 rayon = "1.11.0"
+histo = "1.0.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
