--- a/pkg/package.json
+++ b/pkg/package.json
@@ -1,14 +1,18 @@
 {
   "name": "dissonance-wasm",
+  "type": "module",
   "collaborators": [
     "euwbah <euwbah@gmail.com>"
   ],
-  "version": "0.1.0",
+  "version": "0.1.1",
   "files": [
     "dissonance_wasm_bg.wasm",
     "dissonance_wasm.js",
     "dissonance_wasm.d.ts"
   ],
-  "browser": "dissonance_wasm.js",
-  "types": "dissonance_wasm.d.ts"
+  "main": "dissonance_wasm.js",
+  "types": "dissonance_wasm.d.ts",
+  "sideEffects": [
+    "./snippets/*"
+  ]
 }
